--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* this is indexgit .css part */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
